# relay-viewer

./: AGENTS.md  README.md  flake.nix  justfile
.github/workflows/: android.yml  e2e-video-android.yml  e2e-video-ios.yml  ios.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/dev/damsac/relay_viewer/: RelayViewerE2eTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/dev/damsac/relay_viewer/: MainActivity.kt
android/gradle/: libs.versions.toml
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  models.rs  relay.rs  store.rs
crates/ffi/: Cargo.toml  uniffi.toml
crates/ffi/src/: lib.rs
docs/: e2e-video.md
ios/: project.yml
ios/Sources/: App.swift
ios/Tests/: RelayViewerTests.swift
ios/UITests/: RelayViewerUITests.swift
scripts/: android-e2e-record
